tests/rosetta/out/C/cartesian-product-of-two-or-more-lists-1.error
cc: exit status 1
/tmp/cartesian-product-of-two-or-more-lists-1.c: In function ‘llStr’:
/tmp/cartesian-product-of-two-or-more-lists-1.c:81:32: warning: passing argument 1 of ‘concat_string’ discards ‘const’ qualifier from pointer target type [-Wdiscarded-qualifiers]
   81 |     char *tmp7 = concat_string(s, "[");
      |                                ^
/tmp/cartesian-product-of-two-or-more-lists-1.c:43:34: note: expected ‘char *’ but argument is of type ‘const char *’
   43 | static char *concat_string(char *a, char *b) {
      |                            ~~~~~~^
/tmp/cartesian-product-of-two-or-more-lists-1.c:86:34: warning: passing argument 1 of ‘concat_string’ discards ‘const’ qualifier from pointer target type [-Wdiscarded-qualifiers]
   86 |       char *tmp9 = concat_string(s, tmp8);
      |                                  ^
/tmp/cartesian-product-of-two-or-more-lists-1.c:43:34: note: expected ‘char *’ but argument is of type ‘const char *’
   43 | static char *concat_string(char *a, char *b) {
      |                            ~~~~~~^
/tmp/cartesian-product-of-two-or-more-lists-1.c:89:37: warning: passing argument 1 of ‘concat_string’ discards ‘const’ qualifier from pointer target type [-Wdiscarded-qualifiers]
   89 |         char *tmp10 = concat_string(s, " ");
      |                                     ^
/tmp/cartesian-product-of-two-or-more-lists-1.c:43:34: note: expected ‘char *’ but argument is of type ‘const char *’
   43 | static char *concat_string(char *a, char *b) {
      |                            ~~~~~~^
/tmp/cartesian-product-of-two-or-more-lists-1.c:94:33: warning: passing argument 1 of ‘concat_string’ discards ‘const’ qualifier from pointer target type [-Wdiscarded-qualifiers]
   94 |     char *tmp11 = concat_string(s, "]");
      |                                 ^
/tmp/cartesian-product-of-two-or-more-lists-1.c:43:34: note: expected ‘char *’ but argument is of type ‘const char *’
   43 | static char *concat_string(char *a, char *b) {
      |                            ~~~~~~^
/tmp/cartesian-product-of-two-or-more-lists-1.c:97:35: warning: passing argument 1 of ‘concat_string’ discards ‘const’ qualifier from pointer target type [-Wdiscarded-qualifiers]
   97 |       char *tmp12 = concat_string(s, " ");
      |                                   ^
/tmp/cartesian-product-of-two-or-more-lists-1.c:43:34: note: expected ‘char *’ but argument is of type ‘const char *’
   43 | static char *concat_string(char *a, char *b) {
      |                            ~~~~~~^
/tmp/cartesian-product-of-two-or-more-lists-1.c:102:31: warning: passing argument 1 of ‘concat_string’ discards ‘const’ qualifier from pointer target type [-Wdiscarded-qualifiers]
  102 |   char *tmp13 = concat_string(s, "]");
      |                               ^
/tmp/cartesian-product-of-two-or-more-lists-1.c:43:34: note: expected ‘char *’ but argument is of type ‘const char *’
   43 | static char *concat_string(char *a, char *b) {
      |                            ~~~~~~^
/tmp/cartesian-product-of-two-or-more-lists-1.c: At top level:
/tmp/cartesian-product-of-two-or-more-lists-1.c:134:5: error: redefinition of ‘main’
  134 | int main() {
      |     ^~~~
/tmp/cartesian-product-of-two-or-more-lists-1.c:107:5: note: previous definition of ‘main’ with type ‘int()’
  107 | int main() {
      |     ^~~~
