tests/rosetta/out/C/cartesian-product-of-two-or-more-lists-1.c
// Generated by Mochi compiler v0.10.26 on 2025-07-16T12:35:59Z
// Generated by Mochi compiler v0.10.26 on 2025-07-16T12:35:59Z
#include <stdio.h>
#include <stdlib.h>
#include <string.h>

typedef struct {
  int len;
  int *data;
} list_int;
static list_int list_int_create(int len) {
  list_int l;
  l.len = len;
  l.data = calloc(len, sizeof(int));
  if (!l.data && len > 0) {
    fprintf(stderr, "alloc failed\n");
    exit(1);
  }
  return l;
}
typedef struct {
  int len;
  list_int *data;
} list_list_int;
static list_list_int list_list_int_create(int len) {
  list_list_int l;
  l.len = len;
  l.data = calloc(len, sizeof(list_int));
  if (!l.data && len > 0) {
    fprintf(stderr, "alloc failed\n");
    exit(1);
  }
  return l;
}
static list_list_int concat_list_list_int(list_list_int a, list_list_int b) {
  list_list_int r = list_list_int_create(a.len + b.len);
  for (int i = 0; i < a.len; i++)
    r.data[i] = a.data[i];
  for (int i = 0; i < b.len; i++)
    r.data[a.len + i] = b.data[i];
  return r;
}
static char *concat_string(char *a, char *b) {
  size_t len1 = strlen(a);
  size_t len2 = strlen(b);
  char *buf = (char *)malloc(len1 + len2 + 1);
  memcpy(buf, a, len1);
  memcpy(buf + len1, b, len2);
  buf[len1 + len2] = '\0';
  return buf;
}
static char *_str(int v) {
  char *buf = (char *)malloc(32);
  sprintf(buf, "%d", v);
  return buf;
}
list_list_int cart2(list_int a, list_int b) {
  list_list_int tmp1 = {0, NULL};
  list_list_int p = tmp1;
  for (int tmp2 = 0; tmp2 < a.len; tmp2++) {
    int x = a.data[tmp2];
    for (int tmp3 = 0; tmp3 < b.len; tmp3++) {
      int y = b.data[tmp3];
      list_int tmp4 = list_int_create(2);
      tmp4.data[0] = x;
      tmp4.data[1] = y;
      list_list_int tmp5 = list_list_int_create(1);
      tmp5.data[0] = tmp4;
      list_list_int tmp6 = concat_list_list_int(p, tmp5);
      p = tmp6;
    }
  }
  return p;
}

const char *llStr(list_list_int lst) {
  const char *s = "[";
  int i = 0;
  while (i < lst.len) {
    list_int row = lst.data[i];
    char *tmp7 = concat_string(s, "[");
    s = tmp7;
    int j = 0;
    while (j < row.len) {
      char *tmp8 = _str(row.data[j]);
      char *tmp9 = concat_string(s, tmp8);
      s = tmp9;
      if (j < row.len - 1) {
        char *tmp10 = concat_string(s, " ");
        s = tmp10;
      }
      j = j + 1;
    }
    char *tmp11 = concat_string(s, "]");
    s = tmp11;
    if (i < lst.len - 1) {
      char *tmp12 = concat_string(s, " ");
      s = tmp12;
    }
    i = i + 1;
  }
  char *tmp13 = concat_string(s, "]");
  s = tmp13;
  return s;
}

int main() {
  list_int tmp14 = list_int_create(2);
  tmp14.data[0] = 1;
  tmp14.data[1] = 2;
  list_int tmp15 = list_int_create(2);
  tmp15.data[0] = 3;
  tmp15.data[1] = 4;
  printf("%s\n", llStr(cart2(tmp14, tmp15)));
  list_int tmp16 = list_int_create(2);
  tmp16.data[0] = 3;
  tmp16.data[1] = 4;
  list_int tmp17 = list_int_create(2);
  tmp17.data[0] = 1;
  tmp17.data[1] = 2;
  printf("%s\n", llStr(cart2(tmp16, tmp17)));
  list_int tmp18 = list_int_create(2);
  tmp18.data[0] = 1;
  tmp18.data[1] = 2;
  list_int tmp19 = list_int_create(0);
  printf("%s\n", llStr(cart2(tmp18, tmp19)));
  list_int tmp20 = list_int_create(0);
  list_int tmp21 = list_int_create(2);
  tmp21.data[0] = 1;
  tmp21.data[1] = 2;
  printf("%s\n", llStr(cart2(tmp20, tmp21)));
}

int main() {
  main();
  return 0;
}
